force-app/main/default/objects/XactlyExpress__XCSettings__c/XactlyExpress__XCSettings__c.object-meta.xml
<CustomObject>
    <label>XCSettings</label>
    <nameField>
        <label>XCSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCSettings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>