force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__AdvancedCurrencyManagement__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AdvancedCurrencyManagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AdvancedCurrencyManagement</label>
    <type>Checkbox</type>
</CustomField>