force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__Attribute1Terminology__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Attribute1Terminology__c</fullName>
    <label>Attribute1Terminology</label>
    <length>15</length>
    <type>Text</type>
</CustomField>