force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__AutoRelease__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AutoRelease__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoRelease</label>
    <type>Checkbox</type>
</CustomField>