force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__CalculationProcess__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CalculationProcess__c</fullName>
    <label>CalculationProcess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>