force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__CreditsTerminology__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditsTerminology__c</fullName>
    <label>CreditsTerminology</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>