force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__customizeCommissionStatement__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__customizeCommissionStatement__c</fullName>
    <label>customizeCommissionStatement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>