force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__customizeCommSttmntConcepts__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__customizeCommSttmntConcepts__c</fullName>
    <label>customizeCommSttmntConcepts</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>