force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__customizeManagePayments__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__customizeManagePayments__c</fullName>
    <description>Column format to configure the Manage payments table

{!columnName} = [{!isDisplayed}, {!columnOrder}];</description>
    <label>customizeManagePayments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>