force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__customizePaymentDetails__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__customizePaymentDetails__c</fullName>
    <label>customizePaymentDetails</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>