force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__DrawsTerminology__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DrawsTerminology__c</fullName>
    <label>DrawsTerminology</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>