force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__EarnedTerminology__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EarnedTerminology__c</fullName>
    <label>EarnedTerminology</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>