force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__estimatorDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__estimatorDisclaimer__c</fullName>
    <label>estimatorDisclaimer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>