force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__haveHeaders__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__haveHeaders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>haveHeaders</label>
    <type>Checkbox</type>
</CustomField>