force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__hideDrawsInRepDash__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__hideDrawsInRepDash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hideDrawsInRepDash</label>
    <type>Checkbox</type>
</CustomField>