force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__ImportSource__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ImportSource__c</fullName>
    <label>ImportSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>