force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__licenseStatus__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__licenseStatus__c</fullName>
    <label>licenseStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>