force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__LogException__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__LogException__c</fullName>
    <label>LogException</label>
    <length>255</length>
    <type>Text</type>
</CustomField>