force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__ModifyDealCredits__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ModifyDealCredits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModifyDealCredits</label>
    <type>Checkbox</type>
</CustomField>