force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__OpportunityFieldReadyEmptyValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OpportunityFieldReadyEmptyValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpportunityFieldReadyEmptyValue</label>
    <type>Checkbox</type>
</CustomField>