force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__OpportunityFieldReadyValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OpportunityFieldReadyValue__c</fullName>
    <label>OpportunityFieldReadyValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>