force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__PaymentsQualifierOption__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentsQualifierOption__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>PaymentsQualifierOption</label>
    <length>1</length>
    <type>Text</type>
</CustomField>