force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__SalesforceSidebar__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SalesforceSidebar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Salesforce Sidebar</label>
    <type>Checkbox</type>
</CustomField>