force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__SchemaLevel__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SchemaLevel__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>SchemaLevel</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>