force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__ShowCurrentPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ShowCurrentPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowCurrentPeriod</label>
    <type>Checkbox</type>
</CustomField>