force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__showDealsWithNoEarnings__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__showDealsWithNoEarnings__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show deals with $0 Earns setting in Commission Statement.</description>
    <label>showDealsWithNoEarnings</label>
    <type>Checkbox</type>
</CustomField>