force-app/main/default/objects/XactlyExpress__XCSettings__c/fields/XactlyExpress__XCCurrentPeriodID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCCurrentPeriodID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCCurrentPeriodID</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCSettings (XCCurrentPeriod)</relationshipLabel>
    <relationshipName>XCSettingsCurrent</relationshipName>
    <type>Lookup</type>
</CustomField>